force-app/main/default/objects/Contact/fields/Certification_Status__c.field-meta.xml
<CustomField>
    <fullName>Certification_Status__c</fullName>
    <label>Certification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Certified</fullName>
                <default>true</default>
                <label>Not Certified</label>
            </value>
            <value>
                <fullName>Certified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>