force-app/main/default/objects/Contact/fields/Coach_Since__c.field-meta.xml
<CustomField>
    <fullName>Coach_Since__c</fullName>
    <label>Coach Since</label>
    <type>Date</type>
</CustomField>