force-app/main/default/objects/Contact/fields/Last_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Assessment_Date__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>Updated by ScoreAssessment when a new Assessment__c record reaches Status = Completed for this Contact. Penny uses to flag stale data: if &gt;30 days since last assessment, proactively suggest a check-in (only on explicit request or during Weekly Intelligence Report generation, per OD-4).</description>
    <inlineHelpText>Updated by ScoreAssessment when a new Assessment__c record reaches Status = Completed for this Contact. Penny uses to flag stale data: if &gt;30 days since last assessment, proactively suggest a check-in</inlineHelpText>
    <label>Last Assessment Date</label>
    <type>DateTime</type>
</CustomField>