force-app/main/default/objects/Contact/fields/Learner_Slack_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Learner_Slack_User_Id__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>Learner Slack user ID (xUxxxxxx format). UNIQUE. Used to send DMs via Penny.</description>
    <inlineHelpText>Learner Slack user ID (xUxxxxxx format). UNIQUE. Used to send DMs via Penny.</inlineHelpText>
    <label>Learner Slack User Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>