force-app/main/default/objects/Contact/fields/LMS_Learner_ID__c.field-meta.xml
<CustomField>
    <fullName>LMS_Learner_ID__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>External LMS user identifier. The Google Classroom user ID (numeric) or Google account email. Dedup key for enrollment sync - without this the GC adapter cannot match a Classroom student to a Salesforce Contact. Index this field.</description>
    <externalId>true</externalId>
    <inlineHelpText>External LMS user identifier. The Google Classroom user ID (numeric) or Google account email. Dedup key for enrollment sync - without this the GC adapter cannot match a Classroom student to a Salesforce</inlineHelpText>
    <label>LMS Learner ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>