force-app/main/default/objects/Contact/fields/Max_Learners__c.field-meta.xml
<CustomField>
    <fullName>Max_Learners__c</fullName>
    <label>Max Learners</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>