force-app/main/default/objects/Contact/fields/Onboarding_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Time_Days__c</fullName>
    <description>Days between contact information captures and contact completing volunteer onboarding</description>
    <formula>Onboarding_Completed_Date__c - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days between contact information captures and contact completing volunteer onboarding</inlineHelpText>
    <label>Onboarding Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>