force-app/main/default/objects/Contact/fields/Penny_Coaching_Tone__c.field-meta.xml
<CustomField>
    <fullName>Penny_Coaching_Tone__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>Injected into Layer 3.</description>
    <inlineHelpText>Injected into Layer 3.</inlineHelpText>
    <label>Penny Coaching Tone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Challenging.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>