force-app/main/default/objects/Contact/fields/Penny_Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Penny_Confidence_Score__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>1-5 score. Updated by an authorized person or Penny.</description>
    <inlineHelpText>1-5 score. Updated by an authorized person or Penny.</inlineHelpText>
    <label>Penny Confidence Score</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>