force-app/main/default/objects/Contact/fields/Penny_Current_Blockers__c.field-meta.xml
<CustomField>
    <fullName>Penny_Current_Blockers__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>What is blocking them right now. Injected into Layer 3.</description>
    <inlineHelpText>What is blocking them right now. Injected into Layer 3.</inlineHelpText>
    <label>Penny Current Blockers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>