force-app/main/default/objects/Contact/fields/Penny_Current_Goal__c.field-meta.xml
<CustomField>
    <fullName>Penny_Current_Goal__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>Learner stated job goal + timeline. e.g. SF Admin at nonprofit in Dallas within 90 days.</description>
    <inlineHelpText>Learner stated job goal + timeline. e.g. SF Admin at nonprofit in Dallas within 90 days.</inlineHelpText>
    <label>Penny Current Goal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>