force-app/main/default/objects/Contact/fields/Penny_Current_Phase__c.field-meta.xml
<CustomField>
    <fullName>Penny_Current_Phase__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>Where they are in the program. e.g. Sprint 8 — Demo prep.</description>
    <inlineHelpText>Where they are in the program. e.g. Sprint 8 — Demo prep.</inlineHelpText>
    <label>Penny Current Phase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>