force-app/main/default/objects/Contact/fields/Penny_Onboarding_Complete__c.field-meta.xml
<CustomField>
    <fullName>Penny_Onboarding_Complete__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>True after first Penny conversation + goal-setting. Default False.</description>
    <inlineHelpText>True after first Penny conversation + goal-setting. Default False.</inlineHelpText>
    <label>Penny Onboarding Complete</label>
    <type>Checkbox</type>
</CustomField>