force-app/main/default/objects/Contact/fields/Penny_Skill_Score__c.field-meta.xml
<CustomField>
    <fullName>Penny_Skill_Score__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>Penny&apos;s rolling composite skill score across all completed Skill Assessment records for this learner. Updated by ScoreAssessment Agentforce Action after each assessment completes.  Penny reads in L3 coaching context: &apos;Your current skill score is 72/100 — up from 58 at program start.&apos;</description>
    <inlineHelpText>Penny&apos;s rolling composite skill score across all completed Skill Assessment records for this learner. Updated by ScoreAssessment Agentforce Action after each assessment completes.  Penny reads in L3 coaching context: &apos;Your current skill score is 72/100 — up from 58 at program start.&apos;</inlineHelpText>
    <label>Penny Skill Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>