force-app/main/default/objects/Contact/fields/Penny_Sprint_Week__c.field-meta.xml
<CustomField>
    <fullName>Penny_Sprint_Week__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>Current sprint/week number within the active course. Updated by adapter after each module sync. Penny uses in L3 prompt: &apos;You are in Week 7 of 12.&apos;</description>
    <inlineHelpText>Current sprint/week number within the active course. Updated by adapter after each module sync. Penny uses in L3 prompt: &apos;You are in Week 7 of 12.&apos;</inlineHelpText>
    <label>Penny Sprint Week</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>