force-app/main/default/objects/Contact/fields/Penny_Trail__c.field-meta.xml
<CustomField>
    <fullName>Penny_Trail__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>The active trail for Penny coaching context. Populated by enrollment sync or manually by admin.</description>
    <inlineHelpText>The active trail for Penny coaching context. Populated by enrollment sync or manually by admin.</inlineHelpText>
    <label>Penny Trail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guided Trail</fullName>
            </value>
            <value>
                <fullName>Foundations Trail</fullName>
            </value>
            <value>
                <fullName>Trail of Mastery</fullName>
            </value>
            <value>
                <fullName>Community and Alumni.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>