force-app/main/default/objects/Contact/fields/Penny_Trail_Config__c.field-meta.xml
<CustomField>
    <fullName>Penny_Trail_Config__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the learner to their assigned trail persona.</description>
    <inlineHelpText>Links the learner to their assigned trail persona.</inlineHelpText>
    <label>Penny Trail Config</label>
    <referenceTo>Penny_Trail_Config__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>