force-app/main/default/objects/Contact/fields/Slack_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_User_Id__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>Unique identifier for user in the Slack application</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier for user in the Slack application</inlineHelpText>
    <label>Slack User Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>