force-app/main/default/objects/Contact/fields/TT_Academy_Connector_Token__c.field-meta.xml
<CustomField>
    <fullName>TT_Academy_Connector_Token__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>Encrypted Text. OAuth token for learner dev org read access. Set on Day 1 auth.</description>
    <inlineHelpText>Encrypted Text. OAuth token for learner dev org read access. Set on Day 1 auth.</inlineHelpText>
    <label>TT Academy Connector Token</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>