force-app/main/default/objects/Contact/recordTypes/Coach.recordType-meta.xml
<RecordType>
    <fullName>Coach</fullName>
    <active>true</active>
    <description>Indicates contact is a coach</description>
    <label>Coach</label>
</RecordType>